# ntCard

./: .clang-format  .gitignore  CITATION.bib  CMakeLists.txt  COPYRIGHT  ChangeLog  LICENSE  Makefile  Makefile.am  README.md  azure-pipelines.yml  configure.ac  kmercount-kmc-abyss-giab-raw.tsv  kmercount-kmc-abyss.tsv  kmercount.Rmd  kmercount.html  kmercount.md  main.cpp  meson.build  ntcard  ntcard.cpp  ntcardm.cpp  ntcards.cpp  nthist.cpp  nthll.cpp
Common/: ntHashIterator.hpp  nthash.hpp  stHashIterator.hpp
data/: Makefile.am  test-gap_k12.hist.good  test_k12.hist.good
include/: args.hpp  ntcard.hpp
include/ntcard/: ntcard.hpp  version.hpp
lib/: FastaReader.cpp  FileUtil.h  Options.cpp  Sequence.cpp  Uncompress.cpp  ntHashIterator.hpp  nthash.hpp
src/: main.cpp  ntcard.cpp
test/: bfcard.cpp  ntcard.cpp  ntctest.cpp
